[project]
name = "sample-flask-auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography==41.0.7",
    "flask==2.3.0",
    "flask-login==0.6.2",
    "flask-sqlalchemy==3.1.1",
    "pymysql==1.1.0",
    "werkzeug==2.3.0",
]
